@@ -1,8 +1,10 @@
 Package: gridGraphics
 Title: Redraw Base Graphics Using 'grid' Graphics
-Version: 0.2
-Authors@R: person("Paul", "Murrell", role = c("cre", "aut"),
-                  email = "paul@stat.auckland.ac.nz")
+Version: 0.2-1
+Authors@R: c(person("Paul", "Murrell", role = c("cre", "aut"),
+                    email = "paul@stat.auckland.ac.nz"),
+             person("Zhijian", "Wen", role = "aut",
+                    email = "jwen246@aucklanduni.ac.nz"))
 Description: Functions to convert a page of plots drawn with the 
   graphics package into identical output drawn with the grid package.
   The result looks like the original graphics-based plot, but consists
@@ -15,8 +17,9 @@ SystemRequirements: ImageMagick (for testing)
 License: GPL (>= 2)
 URL: https://github.com/pmur002/gridgraphics
 NeedsCompilation: no
-Packaged: 2017-06-06 00:54:15 UTC; pmur002
-Author: Paul Murrell [cre, aut]
+Packaged: 2018-02-27 02:44:39 UTC; paul
+Author: Paul Murrell [cre, aut],
+  Zhijian Wen [aut]
 Maintainer: Paul Murrell <paul@stat.auckland.ac.nz>
 Repository: CRAN
-Date/Publication: 2017-06-06 11:22:27 UTC
+Date/Publication: 2018-02-27 18:01:26 UTC
